--- a/modules/spardac/eq-5d-form.html
+++ b/modules/spardac/eq-5d-form.html
@@ -20,7 +20,7 @@
                                                 data-id="Participant" />
                                         </label><br>
                                         <label><span class="">Participant ID</span>
-                                            <input type=text name="Participant_uid" class=form-control readonly />
+                                            <input type=text name="Participant_uid" class=form-control _readonly />
                                         </label>
                                     </fieldset>
                                 </div>
