--- a/modules/spardac/ess-form.html
+++ b/modules/spardac/ess-form.html
@@ -18,7 +18,7 @@
                                  <input type=text name="Participant" class=form-control id=Participant__ID data-id="Participant"/>
                              </label><br>
                              <label ><span class="">Participant ID</span>
-                                 <input type=text name="Participant_uid" class=form-control readonly />
+                                 <input type=text name="Participant_uid" class=form-control _readonly />
                              </label>
                           </fieldset>
                       </div>
