--- a/modules/json-viewer/page.html
+++ b/modules/json-viewer/page.html
@@ -4,27 +4,40 @@
 </div>
 <script>
 (function(){
-    //----------------------------------------------------------
-    var _res={}; try{ _res=JSON.parse(`_vm_res_`);}catch(e){console.log(e);} 
-    //----------------------------------------------------------
-    var rid=undefined; try{ rid=_res.qp.rid;}catch(e){} 
-    var record=undefined; try{ record=_res.qp.record;}catch(e){} 
-    //----------------------------------------------------------
-    const container = document.getElementById("vm__vmID");
-    const options = {
-        mode: "form",
-        onEditable: function (node) {
-        return {
-            field: false,
-            value: false
+    var after_load=function(){
+        var arr=_arr;
+        var qp=_qp;
+        //----------------------------------------------------------
+        //var _res={}; try{ _res=JSON.parse(`_vm_res_`);}catch(e){console.log(e);} 
+        //----------------------------------------------------------
+        //var rid=undefined; try{ rid=qp.rid;}catch(e){} 
+        var record=undefined; try{ record=qp.record;}catch(e){} 
+        //----------------------------------------------------------
+        const container = document.getElementById("vm__vmID");
+        const options = {
+            mode: "form",
+            onEditable: function (node) {
+            return {
+                field: false,
+                value: false
+            };
+            },
+            mainMenuBar: false,
+            enableSort: false, 
+            enableTransform: false,
         };
-        },
-        mainMenuBar: false,
-        enableSort: false, 
-        enableTransform: false,
-    };
-    const editor = new JSONEditor(container, options);
-    editor.set(record);
+        const editor = new JSONEditor(container, options);
+        editor.set(record);
+    }
+    //----------------------------------------------------------
+    if(!$vm.json_editor_loaded){
+        $vm.loadCSS("https://cdn.jsdelivr.net/npm/jsoneditor@latest/dist/jsoneditor.min.css");
+        $vm.loadScript("https://cdn.jsdelivr.net/npm/jsoneditor@latest/dist/jsoneditor.min.js",function(){
+            $vm.json_editor_loaded=true;
+            after_load();
+        })
+    }
+    else after_load();
     //----------------------------------------------------------
 })();    
 </script>
